--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -316,14 +316,22 @@ body {
 .hero {
     $transition-duration: 0.2s;
     position: relative;
-    height: 100vh;
+    @include breakpoint($medium-screen) {
+        height: 100vh;
+    }
+    @include mobile-vh(100);
+
     @include clearfix();
     &:before {
         @include breakpoint($medium-screen) {
+            @include filter(blur(2px));
             @include transition(all $transition-duration ease-in-out);
         }
 
-        height: 100vh;
+        @include breakpoint($medium-screen) {
+            height: 100vh;
+        }
+        @include mobile-vh(100);
         text-align: center;
 
         @include filter(blur(1px));
@@ -370,7 +378,7 @@ body {
         }
 
         h2 {
-            font-size: 1.5em;
+            font-size: 1.65em;
         }
 
         div {
@@ -408,7 +416,7 @@ body {
     @extend .hero;
     &:before {
         @include breakpoint($medium-screen) {
-            @include filter(blur(1px));
+            @include filter(blur(0.5px));
         }
     }
 }
